# BrazilianUtilsQt

./: .gitignore  CMakeLists.txt  README.md
src/: boleto.cpp  boleto.h  brazilianutilsqt.cpp  brazilianutilsqt.h  modulo.cpp  modulo.h
test/: CMakeLists.txt  brasilianutilsqttest.cpp  brasilianutilsqttest.h  main.cpp
